--- a/goDesktop.html
+++ b/goDesktop.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Title of the document</title>
+    <title>Use desktop</title>
     <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
     <style>
         body {font-family: 'Indie Flower', cursive;}
