--- a/index.html
+++ b/index.html
@@ -2,10 +2,9 @@
 <html>
 
 <head>
-    <title>Title of the document</title>
+    <title>Get that thing</title>
     <style type="text/css">
         body {
-            background-image: url(bg.jpg);
             color: wheat;
             font-family: 'Indie Flower', cursive;
         }
