--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     <p id="hint">Give it a second!</p>
     <pre id="man"></pre>
-    <p id="text" style="position:absolute;">That thing</p>
+    <p id="text" style="position:absolute;">Goals</p>
 </body>
 
 <script src="https://code.jquery.com/jquery-1.10.2.js"></script>
