--- a/cookie/index.html
+++ b/cookie/index.html
@@ -38,7 +38,7 @@
 
       <div class="subscribe">
         <h1 style="margin-top: 20px;">🍰 شیرینی به مناسبت اتمام خدمت 🍰</h1>
-        <p>به سوپرنوا قول داده بودم برگشتم کل توئیتر رو شیرینی بدم 😐</p>
+        <p>به <a href="https://twitter.com/ArchetypeCast">آركِتايپ</a> و سوپرنوا <a href="https://twitter.com/radioDaal/status/1101550984864645125">قول داده بودم</a> برگشتم کل توئیتر رو شیرینی بدم 😐</p>
         <p>هرچند بهترین شیرینی قسمت‌های جدید و جذاب خواهد بود 🤘</p>
         <p>بریم وارد فاز جدید بشیم ... 🔥</p>
         <br>
